# RayGame

./: CMakeLists.txt
src/: Camera.h  Renderer.cpp  Renderer.h  Scene.h  Types.h  main.cpp
src/shaders/: raytracer.frag  raytracer.vert
